--- a/aging.html
+++ b/aging.html
@@ -4,5 +4,28 @@
 </head>
 <body>
 <h1><center>Aging</center></h1>
+ <br>
+  <h2>Normal age-related findings and care of the well patient</h2><br>
+  <b>Infancy and childhood (0-12 years)</b>
+<i>Normal physical changes: linear growth, variations in linear growth, including constitutional delay; weight; head circumference; micturition, defecation,primary
+  incontinence/bedwetting; normal physical examination; screening; sleep; teething syndrome</i><br>
+  <i>Developmental stages: motor; speech; cognitive; psychosocial; anticipatory guidance</i><br>
+<i>Lifestyle and routine preventive health care: nutrition; exercise (eg, benefits of exercise); preventive/travel medicine; risk factors and prevention (eg, guns, swimming, motor vehicles, car seats); routine vaccinations </i><br>
+
+  <b>Adolescence (13-17 years)</b>
+<i>Normal physical changes: linear growth, variations in linear growth including constitutional delay; weight; puberty; normal physical examination; gynecomastia; autonomy/self-identity; sleep</i><br>
+<i>Developmental stages: cognitive (eg, abstract thought); psychosocial (eg, autonomy, role confusion, sexual identity); anticipatory guidance</i><br>
+<i>Lifestyle and routine preventive health care: nutrition; exercise (eg, benefits of exercise); preventive/travel medicine; risk factors and prevention (eg, risk-taking
+  behavior, helmets, safe sex, motor vehicles, seat belts, distractions); routine vaccinations</i><br>
+  <b>Adulthood (18-64 years)</b>
+  <i>Normal physical changes: weight; normal physical examination; screening; sleep</i><br>
+  <i>Developmental stages: cognitive; intimacy vs isolation; anticipatory guidance</i><br>
+<i> Lifestyle and routine preventive health care: nutrition; exercise (eg, benefits of exercise); preventive/travel medicine; risk factors and prevention; routine
+  vaccinations</i><br>
+  <b>Senescence (65 years and older)</b>
+<i> Normal physical changes, including normal physical exam for age: weight, height (spinal compression), skin, bruising; normal physical examination; response to
+  temperature; micturition, defecation; sleep</i><br>
+  <i>Developmental stages: motor; cognitive (eg, benign senescent forgetfulness); psychosocial; integrity vs despair; retrospection; anticipatory guidance</i><br>
+<i>Lifestyle and routine preventive health care: nutrition; exercise (eg, benefits of exercise); preventive/travel medicine; risk factors and prevention (eg, falls, general medical condition; polypharmacy, driving, caregiver stress); routine vaccinations</i><br>
 </body>
 </html>
