--- a/immunology.html
+++ b/immunology.html
@@ -20,7 +20,7 @@ expressed on the surface; including distribution of MHC I and MHC II on differen
   <i> Functional and molecular biology of cytokines (eg, IL 1-15)</i><br>
   <b> Basis of immunologic diagnostics</b><br>
   <i>Antigen-antibody reactions used for diagnostic purposes, ELISA, immunoblotting, antigen-antibody changes over time, ABO typing)</i><br>
-<b>Principles of immunologic protection<b><br>
+<b>Principles of immunologic protection</b><br>
   <i>Vaccine production and mechanisms of vaccine action</i><br>
 <i> biologically active antibodies (eg, monoclonal antibodies, polyclonal antibodies including IVIG, VZIG, rabies immunoglobulin)</i><br>
   <i> Effect of age on the function of components of the immune system</i><br>
