--- a/blood.html
+++ b/blood.html
@@ -3,7 +3,7 @@
 <title>Circulatory and Hematologic Systems</title>
 </head>
 <body>
-<h1><center>Circulatory and Hematologic Systems</title>
+  <h1><center>Circulatory and Hematologic Systems</center></title>
 <br>
   <b>Cardiovascular Chest Pain</b>
 <Br>
@@ -33,27 +33,27 @@ Answer: <p style="color:white">A - In medicine, when a condition is noted as par
 </form> 
 Answer: <p style="color:white"> Angina is the chest pain resulting from insufficient blood supply to the heart and is treated by vasodilators such as nitroglycerin.</p>
   <br>
-Palpitations/Rhythm Disturbances
+  <b>Palpitations/Rhythm Disturbances</b>
 <br>
-Edema and Swelling
+  <b>Edema and Swelling</b>
 <Br>
-Masses and Lymphadenopathy
+  <b>Masses and Lymphadenopathy</b>
 <br>
-Extremity Pain and Claudication
+  <b>Extremity Pain and Claudication</b>
 <br>
-Shortness of Breath/Dyspnea and Orthopnea
+  <b>Shortness of Breath/Dyspnea and Orthopnea</b>
 <br>
-Bruising, Bleeding, and Clotting Disturbances
+  <b>Bruising, Bleeding, and Clotting Disturbances</b>
 <br>
-Circulatory Collapse and Shock
+  <b>Circulatory Collapse and Shock</b>
 <br>
-Blood Pressure Evaluation
+  <b>Blood Pressure Evaluation</b>
 <br>
-Chest Trauma
+  <b>Chest Trauma</b>
 <br>
-Physical Exam Findings Related to the Circulatory and Hematologic Systems
+  <b>Physical Exam Findings Related to the Circulatory and Hematologic Systems</b>
 <br>
-Laboratory Test Findings and Diagnostic Imaging Related to the Circulatory and Hematologic Systems
+<b>Laboratory Test Findings and Diagnostic Imaging Related to the Circulatory and Hematologic Systems</b>
 <br>
   Which of the following segments of an EKG can remain abnormal weeks to months after an acute myocardial infarction?
   <br>
@@ -69,5 +69,44 @@ Laboratory Test Findings and Diagnostic Imaging Related to the Circulatory and H
 </form> 
 Answer: <p style="color:white">A - In an acute myocardial infarction, the EKG changes over time. The initial changes are shown in ST segment elevation, which decreases over time to appear normal again. Weeks to months after an acute myocardial infarction, the Q wave can stay decreased. In the same time frame, the P and T waves tend to go back to an almost near normal quality.<br>
 <br> 
+<br>
+  <h1><center>Blood and Lymphoreticular System</center></h1>
+  <br>
+  <h2>Normal Processes</h2><br>
+  <b>Embryonic development, fetal maturation, and perinatal changes</b>
+  <br>
+  <b>Organ structure and function</b>
+  <br>
+  <b>Cell/tissue structure and function</b>
+  <br>
+<i>Production and function of erythrocytes, including heme and hemoglobin synthesis; hemoglobin O2 and CO2 transport, transport proteins, erythropoietin</i><br>
+  <i>Production and function of platelets</i><br>
+  <i>Production and function of coagulation and fibrinolytic factors; hemostasis</i><br>
+  <b>Repair, regeneration, and changes associated with stage of life</b><br>
+<h2>Abnormal Processes: Health and Health Maintenance, Screening, Diagnosis, Management, Risks, Prognosis</h2><br>
+  <h3>Infectious and immunologic</h3><br>
+  <b>Infectious disorders</b><br>
+  <i>Bacteria</i><br>
+<i>Viral: hemorrhagic fever (Ebola virus, Marburg virus); chikungunya; dengue fever; Zika virus disease</i><br>
+  <i>Parasitic: malaria (Plasmodium spp); babesiosis (Babesia species)</i><br>
+<i>Primary infections of lymphoid tissue: lymphadenitis (viral, bacterial, fungal, parasitic); lymphangitis; buboes, bubonic plague (Yersinia pestis); cat scratch disease (Bartonella henselae)</i><br>
+<b>Immunologic and inflammatory disorders: cryoglobinemia, essential mixed cryoglobinemia; autoimmune hemolytic anemia; paroxysmal nocturnal hemoglobinuria; thrombotic thrombocytopenic purpura; hemolytic uremic syndrome </i><br>
+<b>Neoplasms: leukemia, acute (ALL, AML); leukemia, chronic (CLL, CML); lymphomas, Hodgkin disease, non-Hodgkin lymphoma, Burkitt lymphoma, T-cell lymphoma; multiple myeloma, dysproteinemias, monoclonal gammopathy of unknown significance (MGUS); myelofibrosis; myelodysplastic syndrome, myelodysplasias; other immunoproliferative neoplasms (eg, Waldenstrom macroglobulinemia) </b><br>
+  <b>Anemia, cytopenias, and polycythemia anemias</b><br>
+  <i>Decreased production: anemia of chronic disease</i><br>
+  <i>Hemolysis: glucose-6-phosphate dehydrogenase deficiency; pyruvate kinase deficiency</i><br>
+<i>Disorders of hemoglobin, heme, or membrane: disorders of red cell membranes; hereditary spherocytosis, elliptocytosis; methemoglobinemia, congenital; sickle cell disease; sideroblastic anemia; thalassemias </i><br>
+  <i>Other causes of anemia: blood loss, acute and chronic as a cause of anemia</i><br>
+<i>Cytopenias: aplastic anemia; leukopenia; neutropenia, cyclic neutropenia, agranulocytosis; pancytopenia; thrombocytopenia, quantitative; immune thrombocytopenic purpura (ITP)</i><br>
+  <i>Cythemias: leukocytosis; polycythemia vera; secondary polycythemia</i><br>
+  <b>Coagulation disorders (hypocoagulable and hypercoagulable conditions)</b><br>
+<i>Hypocoagulable: disseminated intravascular coagulation; hemophilia, congenital factor VIII [hemophilia A] and IX [hemophilia B]; hypofibrinogenemia; von Willebrand disease; platelet dysfunction, qualitative </i><br>
+<i>Hypercoagulable: heparin-induced thrombocytopenia; other coagulopathies (eg, homocysteinemia, hypoplasminogenemia, antithrombin III, protein C/protein S deficiency, Factor V Leiden, anticardiolipin antibodies, lupus anticoagulant, prothrombin G20210A mutation) </i><br>
+<i>Reactions to blood components: ABO incompatibility/anaphylaxis; Rh incompatibility/anaphylaxis; hemolysis, delayed; transfusion reaction; transfusion contaminated with bacteria; transfusion-related acute lung injury (TRALI); anaphylactoid reaction (IgA deficiency)</i><br>
+  <b>Traumatic, mechanical, and vascular disorders</b><br>
+  <i>mechanical injury to erythrocytes (eg, cardiac valve hemolysis)</i><br>
+<i>disorders of the spleen; splenic rupture/laceration; splenic infarct; splenic abscess; effects/complications of splenectomy (eg, sepsis due to encapsulated bacteria); hypersplenism </i><br>
+  <b>Adverse effects of drugs on the hematologic and lymphoreticular systems</b></br>
+  <i>Antiplatelet drugs, antithrombin drugs (eg, dabigatran); chemotherapeutic agents; inhibitors of coagulation factors; methemoglobinemia, acquired; propylthiouracil; tumor lysis syndrome; warfarin </i><br>
 </body>
 </html>
