--- a/blood.html
+++ b/blood.html
@@ -90,8 +90,10 @@ Answer: <p style="color:white">A - In an acute myocardial infarction, the EKG ch
 <i>Viral: hemorrhagic fever (Ebola virus, Marburg virus); chikungunya; dengue fever; Zika virus disease</i><br>
   <i>Parasitic: malaria (Plasmodium spp); babesiosis (Babesia species)</i><br>
 <i>Primary infections of lymphoid tissue: lymphadenitis (viral, bacterial, fungal, parasitic); lymphangitis; buboes, bubonic plague (Yersinia pestis); cat scratch disease (Bartonella henselae)</i><br>
-<b>Immunologic and inflammatory disorders: cryoglobinemia, essential mixed cryoglobinemia; autoimmune hemolytic anemia; paroxysmal nocturnal hemoglobinuria; thrombotic thrombocytopenic purpura; hemolytic uremic syndrome </i><br>
-<b>Neoplasms: leukemia, acute (ALL, AML); leukemia, chronic (CLL, CML); lymphomas, Hodgkin disease, non-Hodgkin lymphoma, Burkitt lymphoma, T-cell lymphoma; multiple myeloma, dysproteinemias, monoclonal gammopathy of unknown significance (MGUS); myelofibrosis; myelodysplastic syndrome, myelodysplasias; other immunoproliferative neoplasms (eg, Waldenstrom macroglobulinemia) </b><br>
+  <b>Immunologic and inflammatory disorders</b><br>
+  <i>Cryoglobinemia, essential mixed cryoglobinemia; autoimmune hemolytic anemia; paroxysmal nocturnal hemoglobinuria; thrombotic thrombocytopenic purpura; hemolytic uremic syndrome </i><br>
+  <b>Neoplasms</b>
+  <i>leukemia, acute (ALL, AML); leukemia, chronic (CLL, CML); lymphomas, Hodgkin disease, non-Hodgkin lymphoma, Burkitt lymphoma, T-cell lymphoma; multiple myeloma, dysproteinemias, monoclonal gammopathy of unknown significance (MGUS); myelofibrosis; myelodysplastic syndrome, myelodysplasias; other immunoproliferative neoplasms (eg, Waldenstrom macroglobulinemia) </i><br>
   <b>Anemia, cytopenias, and polycythemia anemias</b><br>
   <i>Decreased production: anemia of chronic disease</i><br>
   <i>Hemolysis: glucose-6-phosphate dehydrogenase deficiency; pyruvate kinase deficiency</i><br>
