--- a/blood.html
+++ b/blood.html
@@ -92,7 +92,7 @@ Answer: <p style="color:white">A - In an acute myocardial infarction, the EKG ch
 <i>Primary infections of lymphoid tissue: lymphadenitis (viral, bacterial, fungal, parasitic); lymphangitis; buboes, bubonic plague (Yersinia pestis); cat scratch disease (Bartonella henselae)</i><br>
   <b>Immunologic and inflammatory disorders</b><br>
   <i>Cryoglobinemia, essential mixed cryoglobinemia; autoimmune hemolytic anemia; paroxysmal nocturnal hemoglobinuria; thrombotic thrombocytopenic purpura; hemolytic uremic syndrome </i><br>
-  <b>Neoplasms</b>
+  <b>Neoplasms</b><br>
   <i>leukemia, acute (ALL, AML); leukemia, chronic (CLL, CML); lymphomas, Hodgkin disease, non-Hodgkin lymphoma, Burkitt lymphoma, T-cell lymphoma; multiple myeloma, dysproteinemias, monoclonal gammopathy of unknown significance (MGUS); myelofibrosis; myelodysplastic syndrome, myelodysplasias; other immunoproliferative neoplasms (eg, Waldenstrom macroglobulinemia) </i><br>
   <b>Anemia, cytopenias, and polycythemia anemias</b><br>
   <i>Decreased production: anemia of chronic disease</i><br>
