--- a/behavioral.html
+++ b/behavioral.html
@@ -3,6 +3,34 @@
 <title>Behavioral Sciences</title>
 </head>
 <body>
-<h1><center>Behavioral Sciences</center></h1>
+<h1><center>Behavioral Sciences</center></h1><br>
+  <h2>Normal Processes</h2><br>
+<b>Psychodynamic and behavioral factors, related past experience (eg, transference, personality traits)</b><br>
+  <b>Adaptive behavioral responses to stress and illness (eg, coping mechanisms)</b><br>
+<b>Maladaptive behavioral responses to stress and illness (eg, drug-seeking behavior, sleep deprivation)</b><br>
+  <b>Patient adherence: general adherence; adolescent adherence</b><br>
+<h2>Abnormal Processes: Health and Health Maintenance, Screening, Diagnosis, Management, Risks, Prognosis</h2><br>
+  <b>Psychotic disorders</b><br>
+  <i>Brief psychotic disorder; delusional disorder; psychotic disorder due to another medical condition; schizophrenia; schizoaffective disorder; substance-induced psychotic disorder</i><br>
+  <b>Anxiety disorders</b><br>
+  <i>Acute stress disorder; anxiety disorders (generalized anxiety disorder,anxiety due to another medical condition, social phobia); hyperventilation syndrome; obsessive-compulsive disorder; panic disorder with and without agoraphobia; phobic disorders; post-traumatic stress disorder; separation anxiety disorder; substance-induced anxiety disorder, trichotillomania</i><br>
+  <b>Mood disorders</b><br>
+  <i>Major depressive disorder with and without psychotic features, with and without seasonal pattern; major depressive disorder, postpartum, with and without psychotic features, including screening; cyclothymic disorder; persistent depressive disorder (dysthymia); bipolar disorder, manic/depressed/mixed; premenstrual dysphoric disorder; bipolar and related disorder or depressive disorder due to another medical condition; substance/medication-induced bipolar and related disorder or depressive disorder (illegal or prescribed); suicidal ideation/attempt</i><br>
+  <b>Somatoform disorders</b> <br>
+  <i>Body dysmorphic disorder; conversion disorder, including psychogenic seizures; dissociative disorders; illness anxiety disorder (hypochondriasis); malingering; pain disorder; somatic symptom disorder</i><br>
+  <b>Factitious disorders</b>
+  <i>Factitious disorder imposed on self</i>
+  <b>Eating disorders and impulse control disorders</b><br>
+  <i>Anorexia nervosa; binge-eating disorder; bulimia nervosa; eating disorder; disruptive, impulse-control, and conduct disorders (eg,gambling, kleptomania, pyromania)</i><br>
+  <b>Disorders originating in infancy/childhood</b><br>
+  <i>Reactive attachment disorder; attention deficit/hyperactivity disorder; speech sound disorder or language disorder; learning disorder/dyslexia; intellectual developmental disorder and developmental delay, undefined, including school problems, fetal alcohol syndrome; oppositional defiant disorder, conduct disorder; autism spectrum disorder, Rett syndrome; psychoses with origin specific to childhood; elimination disorders (incontinence, encopresis); tic disorders/Tourette disorder</i><br>
+  <b>Personality disorders</b><br>
+  <i>Antisocial personality disorder; avoidant personality disorder; borderline personality disorder; dependent personality disorder; histrionic personality disorder; narcissistic personality disorder; obsessive-compulsive personality disorder; paranoid personality disorder; schizoid personality disorder</i><br>
+  <b>Psychosocial disorders/behaviors</b><br>
+  <i>Adjustment disorder; grief response/bereavement, normal and persistent complex; parent-child relational problems other than physical or emotional abuse; other psychosocial stress</i><br>
+  <b>Sexual and gender identity disorders</b><br>
+  <i>Gender dysphoria; psychosexual dysfunction</i><br>
+  <b>Substance use disorders</b><br>
+  <i>Alcohol use disorder/intoxication/dependence/withdrawal; tobacco/nicotine use disorder/dependence/withdrawal; varenicline use; cannabis use disorder/intoxication/dependence; hallucinogen use disorder/intoxication/dependence/withdrawal; inhalant use disorder/intoxication/dependence/withdrawal; opioid, heroin, including prescription drug, use disorder/intoxication/dependence/withdrawal; sedative, hypnotic, including benzodiazepine and barbiturate use disorder/intoxication/dependence/withdrawal; stimulant, cocaine, methamphetamine use disorder/intoxication/dependence/withdrawal; other drugs of use disorders (eg, ecstasy, PCP, bath salts)/intoxication/dependence/withdrawal; polysubstance use disorder/intoxication/dependence/withdrawal</i><br>
 </body>
 </html>
