--- a/behavioral.html
+++ b/behavioral.html
@@ -18,8 +18,8 @@
   <i>Major depressive disorder with and without psychotic features, with and without seasonal pattern; major depressive disorder, postpartum, with and without psychotic features, including screening; cyclothymic disorder; persistent depressive disorder (dysthymia); bipolar disorder, manic/depressed/mixed; premenstrual dysphoric disorder; bipolar and related disorder or depressive disorder due to another medical condition; substance/medication-induced bipolar and related disorder or depressive disorder (illegal or prescribed); suicidal ideation/attempt</i><br>
   <b>Somatoform disorders</b> <br>
   <i>Body dysmorphic disorder; conversion disorder, including psychogenic seizures; dissociative disorders; illness anxiety disorder (hypochondriasis); malingering; pain disorder; somatic symptom disorder</i><br>
-  <b>Factitious disorders</b>
-  <i>Factitious disorder imposed on self</i>
+  <b>Factitious disorders</b><br>
+  <i>Factitious disorder imposed on self</i><br>
   <b>Eating disorders and impulse control disorders</b><br>
   <i>Anorexia nervosa; binge-eating disorder; bulimia nervosa; eating disorder; disruptive, impulse-control, and conduct disorders (eg,gambling, kleptomania, pyromania)</i><br>
   <b>Disorders originating in infancy/childhood</b><br>
