--- a/nervous.html
+++ b/nervous.html
@@ -186,7 +186,96 @@ Answer: <p style="color:white"> A patient who has upper neuronal damage will dem
 </form> 
 Answer: <p style="color:white"> Normal infants and adults with upper neuronal damage will display a positive Babinski sign, where the big toe extends and the rest of the toes fan outward when the sole is stroked. In normal patients above two years of age, all toes will curl inward instead.</p>
 <br>
-  <b>Laboratory Test Findings and Diagnostic Imagining Related to the Nervous System and Mental Health</b>
+  <b>Laboratory Test Findings and Diagnostic Imaging Related to the Nervous System and Mental Health</b>
 <br>
+  <h2>Normal Processes</h2>
+<b>Embryonic development, fetal maturation, and perinatal changes, including neural tube derivatives, cerebral ventricles, and neural crest derivatives</b><br>
+  <b>Organ structure and function</b><br>
+  <i>spinal cord: gross anatomy and blood supply, spinal reflexes</i><br>
+<i>brain stem (eg, cranial nerves and nuclei, reticular formation, anatomy and blood supply, control of eye movements)</i><br>
+  <i>brain: gross anatomy and blood supply; higher function: cognition, language, memory, executive function; hypothalamic function; limbic system and emotional behavior; circadian rhythm sleep-wake disorder</i><br>
+<i>sensory systems; general sensory modalities, including sharp, dull, temperature, vibratory, and proprioception; special sensory modalities, including vision, hearing, taste, olfaction, and balance</i>
+  <i>motor systems; brain and spinal cord (upper motoneuron); basal ganglia and cerebellum</i><br>
+  <i>autonomic nervous system</i><br>
+  <i>peripheral nerves</i><br>
+  <b>Cell/tissue structure and function, including neuronal cellular and molecular biology</b><br>
+  <i>axonal transport</i><br>
+  <i>excitable properties of neurons, axons, and dendrites, including channels</i><br>
+  <i>synthesis, storage, release, reuptake, and degradation of neurotransmitters and neuromodulators</i><br>
+  <i>presynaptic and postsynaptic receptor interactions, trophic and growth factors</i><br>
+  <i>brain metabolism</i><br>
+  <i>glia, myelin</i><br>
+<i>brain homeostasis: blood-brain barrier, cerebrospinal fluid formation and flow, choroid plexus</i><br>
+  <b>Repair, regeneration, and changes associated with stage of life</b><br>
+<h2>Abnormal Processes: Health and Health Maintenance, Screening, Diagnosis, Management, Risks, Prognosis</h2><br>
+  <h3>Infectious disorders</h3><br>
+  <b>Meningitis</b><br>
+  <i>bacterial (Actinomyces israelii; Haemophilus influenzae; Listeria monocytogenes; Mycobacterium tuberculosis; Neisseria meningitidis; Staphylococcus aureus, epidermidis; Streptococcus agalactiae; Streptococcus pneumoniae)</i><br>
+    <i>viral (adenovirus, arboviruses, echovirus and coxsackie A & B viruses, polioviruses, herpes simplex virus, varicella zoster, human immunodeficiency virus, lymphocytic choriomeningitis virus, measles virus, mumps virus, St. Louis encephalitis virus, California encephalitis virus, Western equine encephalitis virus)</i><br>
+    <i>fungal (Blastomycosis dermatitidis, Cryptococcus neoformans/gattii); spirochetal (Borrelia burgdorferi; Leptospira; Treponema pallidum, including neurosyphilis) </i><br>
+<i>protozoal/helminths (Acanthamoeba, Naegleria fowleri, Strongyloides stercoralis, Angiostrongylus cantonensis, Baylisascaris procyonis); encephalitis (herpesvirus [HSVI], varicella-zoster virus, Epstein-Barr virus, cytomegalovirus, mumps virus, enterovirus, West Nile virus, St. Louis encephalitis virus, rabies virus, Eastern and Western equine encephalitis virus, poliovirus, Taenia, Toxoplasma gondii)</i><br>
+  <i>prion disease (eg, Creutzfeldt-Jakob disease)</i><br>
+  <i>botulism (Clostridium botulinum), tetanus (Clostridium tetani)</i><br>
+  <i>CNS disorders associated with AIDS (eg, progressive multifocal leukoencephalopathy)</i><br>
+  <b>Immunologic and inflammatory disorders</b><br>
+  <i>Myasthenia gravis, including thymoma; multiple sclerosis; transverse myelitis</i><br>
+  <b>Neoplasms (cerebral, spinal, and peripheral)</b><br>
+  <i>Benign (meningioma, neurofibromatosis)</i><br>
+<i>Malignant (glioblastoma multiforme, astrocytoma, medulloblastoma, primary CNS lymphoma)</i><br>
+  <i>Metastatic (eg, breast, lung, pancreatic, testicular, melanoma)</i><br>
+  <b>Cerebrovascular disease</b>
+  <i>Arteriovenous malformations, ectatic cerebral vessels; transient ischemic attack; stroke, thrombotic: cerebral artery occlusion/cerebral infarction; stroke, embolic: cerebral embolism; stroke: intracerebral hemorrhage, including subarachnoid hemorrhage, traumatic intracranial hemorrhage; cerebral artery aneurysm; carotid artery stenosis/atherosclerosis/occlusion/dissection; vertebral artery deficiency/dissection; subclavian steal syndrome; vascular dementia; hypertensive encephalopathy; posterior reversible encephalopathy syndrome; venous sinus thrombosis</i><br>
+  <b>Disorders relating to the spine, spinal cord, and spinal nerve roots</b><br>
+  <i>Cauda equina syndrome; spinal artery thrombosis/embolus/infarct; spinal cord compression; spinal cord transection, paraplegia and quadriplegia, acute and chronic effects (eg, autonomic dysreflexia); spinal stenosis (cervical, lumbar); syringomyelia</i><br>
+  <b>Cranial and peripheral nerve disorders</b><br>
+  <i>Cranial nerve injury/disorders</i><br>
+  <i>cranial nerve injury; Bell palsy; anisocoria, miosis, mydriasis; internuclear ophthalmoplegia; nystagmus and other irregular eye movements; vestibular neuritis, labyrinthitis; ptosis of the eyelid; Horner syndrome peripheral nerve/plexus injury/disorders: peripheral nerve injury, including brachial plexus; carpal/cubital/tarsal/peroneal tunnel syndrome; mononeuritis, Guillain-Barré syndrome; Miller Fisher syndrome; neuropathy (eg, Charcot-Marie-Tooth disease); herpes zoster</i><br>
+  <b>Neurologic pain syndromes</b><br>
+  <i>Complex regional pain syndrome (reflex sympathetic dystrophy, causalgia); fibromyalgia; postherpetic neuralgia; phantom limb pain/syndrome; thalamic pain syndrome; trigeminal neuralgia </i><br>
+    <b>Degenerative disorders/amnestic syndromes</b><br>
+    <i>Alzheimer disease; frontotemporal dementia, including progressive supranuclear palsy, Lewy body disease; mild neurocognitive disorder, mild cognitive impairment</i><br>
+  <b>Global cerebral dysfunction</b><br>
+  <i>Altered states of consciousness; delirium; coma/brain death</i><br>
+  <b>Neuromuscular disorders</b><br>
+  <i>Amyotrophic lateral sclerosis/spinal muscular atrophy; muscular dystrophy (eg, Duchenne, myotonic); muscle channelopathies (eg, hypokalemic period paralysis)</i><br>
+  <b>Movement disorders</b><br>
+  <i>Acute dystonia; adult tic disease; essential tremor; Huntington disease; Parkinson disease, including Parkinson dementia</i><br>
+  <b>Metabolic disorders</b><br>
+  <i>Adrenoleukodystrophy; metabolic encephalopathy</i><br>
+  <b>Paroxysmal disorders</b><br>
+  <i>Headache, including migraine, mixed, tension, ice-pick, cluster,medication withdrawal, caffeine withdrawal</i><br>
+  <i>Seizure disorders, including generalized tonic-clonic, partial, absence, febrile</i><br>
+  <b>Sleep disorders</b><br>
+  <i>Cataplexy and narcolepsy; circadian rhythm sleep-wake disorder; insomnia, primary; sleep terror disorder and sleepwalking; REM sleep behavior disorder; restless legs syndrome</i><br>
+  <b>Traumatic and mechanical disorders and disorders of increased intracranial pressure</b><br>
+<i>Anoxic brain damage, cerebral hypoxia; epidural, subdural hematoma (cerebral and spinal); intraparenchymal hemorrhage, traumatic subarachnoid hemorrhage; cerebral edema; pseudotumor cerebri (idiopathic intracranial hypertension); torticollis/cervical dystonia; hydrocephalus, including normal-pressure; traumatic brain injury (concussion)/postconcussion syndrome (dementia pugilistica); traumatic brain syndrome</i>
+<b>Congenital disorders</b><br>
+  <i>Friedreich ataxia; neural tube defects (eg, spina bifida, holoprosencephaly, anencephaly); microcephaly; Sturge-Weber syndrome; tuberous sclerosis, von Hippel-Lindau disease; hydrocephalus, obstructive (Arnold-Chiari)</i><br>
+  <b>Adverse effects of drugs on the nervous system</b><br>
+  <i>Acute dystonic reaction; drug-induced meningitis (eg, NSAIDs, sulfa drugs); drug-induced neuropathy (eg, vincristine, isoniazid, metronidazole); extrapyramidal adverse effects (eg, akathisia, dystonia, drug-induced parkinsonism); neuroleptic malignant syndrome; poisoning by psychotropic agents, including antidepressants; serotonin syndrome; tardive dyskinesia</i><br>
+  <h3>Disorders of the eye and eyelid</h3><br>
+  <b>Infectious and inflammatory disorders of the eye</b><br>
+  <i>blepharitis/eyelid inflammation; chalazion; chorioretinitis; conjunctivitis (adenovirus)/keratoconjunctivitis; dacryocystitis; endophthalmitis; hordeolum; iridocyclitis; optic neuritis; periorbital cellulitis; uveitis</i><br>
+  <b>Neoplasms of the eye</b><br>
+  <i>Melanoma; retinoblastoma</i><br>
+<b>Disorders of the eye and eyelid, structural<b><br>
+  <i>Cataract; glaucoma; lacrimal system disorders; pterygium; refractive disorders (presbyopia, myopia, hyperopia, astigmatism)</i><br>
+  <b>Disorders of the pupil, iris, muscles (extraocular)</b><br>
+  <i>Amblyopia; strabismus</i><br>
+  <b>Disorders of the retina</b><br>
+  <i>Hypertensive retinopathy; macular degeneration; papilledema; retinal detachment; retinitis pigmentosa; vascular disorders affecting the retina including central retinal artery embolus, retinal hemorrhage, amaurosis fugax, embolus, carotid artery stenosis, central retinal vein occlusion; visual impairment/blindness, night blindness</i><br>
+  <b>Traumatic and mechanical disorders</b><br>
+  <i>Black eye; burn of the eye and adnexa; corneal abrasion, ulcer; dislocated lens; foreign body in eye; hyphema; injury to optic nerve and pathways; laceration of the eye and eyelid; ocular open wounds; orbital fracture; subconjunctival hemorrhage</i><br>
+  <b>Adverse effects of drugs on the eyes</b><br>
+  <i>Ethambutol; hydroxychloroquine; prednisone</i><br>
+  <h3>Disorders of the ear</h3>
+  <b>Infectious and inflammatory disorders of the ear</b><br>
+  <i>Chondritis; mastoiditis; otitis, externa, media, interna, serous, suppurative, malignant otitis external neoplasms: acoustic neuroma, neurofibromatosis type 2; cholesteatoma</i><br>
+  <b>Hearing loss/deafness</b><br>
+  <i>Hearing loss, including noise-induced; otosclerosis; tinnitus disorders of balance and spatial orientation: Ménière disease; motion sickness; vertigo, including benign positional vertigo</i><br>
+  <b>Traumatic and mechanical disorders</b><br>
+  <i>Barotrauma; foreign body in ear; impacted cerumen; laceration, avulsion; perforation of tympanic membrane; eustachian tube disorders</i><br>
+  <b>Adverse effects of drugs on the ear</b><br>
+  <i>antineoplastic agents, including cisplatin; aminoglycosides; furosemide; salicylates</i><br>
 </body>
 </html>
