--- a/nervous.html
+++ b/nervous.html
@@ -248,17 +248,17 @@ Answer: <p style="color:white"> Normal infants and adults with upper neuronal da
   <b>Sleep disorders</b><br>
   <i>Cataplexy and narcolepsy; circadian rhythm sleep-wake disorder; insomnia, primary; sleep terror disorder and sleepwalking; REM sleep behavior disorder; restless legs syndrome</i><br>
   <b>Traumatic and mechanical disorders and disorders of increased intracranial pressure</b><br>
-<i>Anoxic brain damage, cerebral hypoxia; epidural, subdural hematoma (cerebral and spinal); intraparenchymal hemorrhage, traumatic subarachnoid hemorrhage; cerebral edema; pseudotumor cerebri (idiopathic intracranial hypertension); torticollis/cervical dystonia; hydrocephalus, including normal-pressure; traumatic brain injury (concussion)/postconcussion syndrome (dementia pugilistica); traumatic brain syndrome</i>
+<i>Anoxic brain damage, cerebral hypoxia; epidural, subdural hematoma (cerebral and spinal); intraparenchymal hemorrhage, traumatic subarachnoid hemorrhage; cerebral edema; pseudotumor cerebri (idiopathic intracranial hypertension); torticollis/cervical dystonia; hydrocephalus, including normal-pressure; traumatic brain injury (concussion)/postconcussion syndrome (dementia pugilistica); traumatic brain syndrome</i><br>
 <b>Congenital disorders</b><br>
   <i>Friedreich ataxia; neural tube defects (eg, spina bifida, holoprosencephaly, anencephaly); microcephaly; Sturge-Weber syndrome; tuberous sclerosis, von Hippel-Lindau disease; hydrocephalus, obstructive (Arnold-Chiari)</i><br>
   <b>Adverse effects of drugs on the nervous system</b><br>
   <i>Acute dystonic reaction; drug-induced meningitis (eg, NSAIDs, sulfa drugs); drug-induced neuropathy (eg, vincristine, isoniazid, metronidazole); extrapyramidal adverse effects (eg, akathisia, dystonia, drug-induced parkinsonism); neuroleptic malignant syndrome; poisoning by psychotropic agents, including antidepressants; serotonin syndrome; tardive dyskinesia</i><br>
   <h3>Disorders of the eye and eyelid</h3><br>
   <b>Infectious and inflammatory disorders of the eye</b><br>
-  <i>blepharitis/eyelid inflammation; chalazion; chorioretinitis; conjunctivitis (adenovirus)/keratoconjunctivitis; dacryocystitis; endophthalmitis; hordeolum; iridocyclitis; optic neuritis; periorbital cellulitis; uveitis</i><br>
+  <i>Blepharitis/eyelid inflammation; chalazion; chorioretinitis; conjunctivitis (adenovirus)/keratoconjunctivitis; dacryocystitis; endophthalmitis; hordeolum; iridocyclitis; optic neuritis; periorbital cellulitis; uveitis</i><br>
   <b>Neoplasms of the eye</b><br>
   <i>Melanoma; retinoblastoma</i><br>
-<b>Disorders of the eye and eyelid, structural<b><br>
+<b>Disorders of the eye and eyelid, structural</b><br>
   <i>Cataract; glaucoma; lacrimal system disorders; pterygium; refractive disorders (presbyopia, myopia, hyperopia, astigmatism)</i><br>
   <b>Disorders of the pupil, iris, muscles (extraocular)</b><br>
   <i>Amblyopia; strabismus</i><br>
